--- a/countrypicker/src/main/res/layout/country_picker_dialog.xml
+++ b/countrypicker/src/main/res/layout/country_picker_dialog.xml
@@ -19,6 +19,8 @@
         android:padding="10dp"
         android:inputType="text"
         android:imeOptions="actionDone"
+        android:layout_gravity="start"
+        android:textAlignment="viewStart"
         android:textColor="@android:color/black"
         android:layout_marginTop="15dp"
         android:layout_marginStart="15dp"
